# p2hnns-benchmarks

./: .gitignore  .gitmodules  README.md  balltree.html  bctree.html  bh.html  bruteforce.html  bt-mqh.html  cifar-10-euclidean_10_euclidean.html  cifar10-512-euclidean-20k_10_euclidean.html  compute-rc-lid-expansion.py  compute-rc.py  convert_algos.py  create_dataset.py  create_website.py  data_export.py  deep1m-euclidean_10_euclidean.html  fh.html  glove-100-euclidean-20k-psm-rc.txt  glove-100-euclidean-bcq_10_euclidean.html  glove-100-euclidean-rc.txt  glove-100-euclidean_10_euclidean.html  glove-25-angular-20k_10_angular.html  glove-25-angular_10_angular.html  glove-25-euclidean-20k_10_euclidean.html  glove-25-euclidean-med_10_euclidean.html  glove-25-euclidean-small_10_euclidean.html  glove-25-euclidean_10_euclidean.html  index.html  install.py  mh-mqh.html  mh.html  mqh-kjl.html  mqh-test.html  mqh-test2.html  mqh-v2.html  mqh.html  music100-euclidean_10_euclidean.html  nh.html  plot.py  (+5 more)
__MACOSX/: ._glove-25-angular.hdf5
ann_benchmarks/: datasets.py  distance.py  main.py  runner.py
benchmark_results/: ah.html  balltree.html  bctree.html  bh.html  bruteforce.html  bt-mqh-v2.html  bt-mqh.html  cifar10-512-euclidean-med_10_euclidean.html  cifar10-512-euclidean_10_euclidean.html  deep10m-96-euclidean_10_euclidean.html  eh.html  fashion-mnist-784-euclidean_10_euclidean.html  fh.html  gist-960-euclidean-med_10_euclidean.html  gist-960-euclidean_10_euclidean.html  index.html  mh-mqh-v2.html  (+19 more)
p2hnns_benchmarks/algorithms/bh/binding/: CMakeLists.txt  python_wrapper_bh.cpp
(+260 files in other folders)
